# cpp-opengl-renderer

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
